resolved not showing voted when voting 0

--- a/app/styles.css
+++ b/app/styles.css
@@ -59,7 +59,11 @@ body {
     position: absolute;
     bottom: 5vh;
     width: 100%;
+    height: 100px;
     justify-content: center;
+    align-items: bottom;
+    display: flex;
+    align-items: flex-end;
 }
 
 html, body {
@@ -72,6 +76,8 @@ html, body {
     padding-bottom: 15px;
     width: 100%;
     justify-content: center;
+    position: absolute;
+    height: 100%;
 }
 
 body {
@@ -91,8 +97,8 @@ body {
     font-weight: bold;
     margin-right: 15px;
     transform: 5s;
-    animation-name: cardDown;
-    animation-duration: 0.5s;
+    /* animation-name: cardDown;
+    animation-duration: 0.5s; */
 }
 
 @keyframes cardUp {
@@ -109,12 +115,12 @@ body {
     to {margin-top: 0px;}
   }
 
-.card:hover {
+.card.notVoted:hover {
     margin-top: -5px;
     background: white;
     cursor: pointer;
     animation-name: cardUpPreview;
-  animation-duration: 0.5s;
+  animation-duration: 0.2s;
 }
 
 .card.voted {
